--- a/compton/compton.conf
+++ b/compton/compton.conf
@@ -8,14 +8,14 @@ shadow = true;
 no-dock-shadow = true;
 no-dnd-shadow = true;
 clear-shadow = true;
-shadow-radius = 10;
-shadow-offset-x = -15;
-shadow-offset-y = -15;
-shadow-opacity = 0.5;
+shadow-radius = 8;
+shadow-offset-x = -5;
+shadow-offset-y = -5;
+shadow-opacity = 0.85;
 menu-opacity = 1;
 shadow-exclude = [ "class_g = 'slop'" ];
-blur-background-exclude = [ "name = 'gnome-screenshot'", "class_g = 'slop'", "class_g ?= 'gnome-screenshot'" ];
-fading = false;
+blur-background-exclude = [ "name = 'gnome-screenshot'", "class_g = 'slop'", "class_g ?= 'gnome-screenshot'", "class_g = 'rofi'" ];
+fading = true;
 fade-delta = 4;
 fade-in-step = 0.03;
 fade-out-step = 0.03;
@@ -41,6 +41,6 @@ wintypes :
     shadow = false;
   };
 };
-active-opacity = 1.;
-inactive-opacity = 1.;
+active-opacity = 1.0;
+inactive-opacity = 1.0;
 shadow-ignore-shaped = false;
