--- a/compton/compton.conf
+++ b/compton/compton.conf
@@ -5,7 +5,7 @@ glx-swap-method = 1;
 blur-background = false;
 blur-kern = "7x7box";
 shadow = true;
-no-dock-shadow = true;
+no-dock-shadow = false;
 no-dnd-shadow = true;
 clear-shadow = true;
 shadow-radius = 8;
