--- a/xorg/00-keyboard.conf
+++ b/xorg/00-keyboard.conf
@@ -1,7 +1,6 @@
 Section "InputDevice"
     Identifier     "custom-keyboard"
-    Driver         "kbd"
-	MatchIsKeyboard "on"
-	Option "xkbLayout" "us"
-	Option "xkbOptions" "caps:escape"
+	Driver "kbd"
+	Option "XkbLayout" "us"
+	Option "XkbOptions" "caps:escape"
 EndSection
