--- a/xorg/00-keyboard.conf
+++ b/xorg/00-keyboard.conf
@@ -1,6 +1,9 @@
-Section "InputDevice"
-    Identifier     "custom-keyboard"
+Section "InputClass"
+	Identifier "custom-keyboard"
 	Driver "kbd"
+	MatchIsKeyboard "on"
+
+    Option "XkbModel" "pc105"
 	Option "XkbLayout" "us"
 	Option "XkbOptions" "caps:escape"
 EndSection
