--- a/xorg/00-mouse.conf
+++ b/xorg/00-mouse.conf
@@ -1,5 +1,5 @@
 Section "InputClass"
-	Identifier "custom-mouse"
+	Identifier "Mouse0"
 	MatchDriver "libinput"
 	MatchProduct "DLL06E4:01 06CB:7A13 Touchpad"
 	Option "AccelSpeed" "0.7"
