--- a/i3/config
+++ b/i3/config
@@ -249,7 +249,7 @@ exec --no-startup-id $XDG_CONFIG_HOME/polybar/launch.sh
 exec --no-startup-id $XDG_CONFIG_HOME/hideit/launch.sh
 exec --no-startup-id nitrogen --restore
 exec --no-startup-id compton --config $HOME/.config/compton.conf -b
-exec --no-startup-id xautolock -detectsleep -time 7 -killtime 15 -killer 'systemctl suspend' -locker "i3lock --nofork \
+exec --no-startup-id xautolock -detectsleep -time 7 -locker "i3lock --nofork \
 	--ignore-empty-password \
 	--image='/home/junwoo/gdrive/Graphics/Wallpapers/Computer/oI6nY95 [3840x2160].png' \
 	--keyhlcolor=3498DBFF \
