--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,16 +1,20 @@
+# rebind prefix
+unbind C-b
 set -g prefix C-a
 bind C-a send-prefix
-unbind C-b
 
 set -g default-terminal "xterm-256color"
 set-option -ga terminal-overrides ",xterm-256color:Tc"
 
+# reload config
+bind r source-file ~/.tmux.conf
+
 set-window-option -g mode-keys vi
 set -sg escape-time 0
 
+# rebind splits to match vim
 unbind-key s
 unbind-key v
-
 bind-key s split-window
 bind-key v split-window -h
 
@@ -35,3 +39,40 @@ bind -r h select-pane -L
 bind -r l select-pane -R
 
 set -g mouse on
+
+# appearance
+# Status line.
+set -g status-fg white
+set -g status-bg black
+set -g status-left ""
+set -g status-right "#{?pane_synchronized, #[bg=blue]SYNCHRONIZED#[default],} #S "
+ 
+# Window list.
+setw -g window-status-fg colour246 # grey
+setw -g window-status-bg black
+setw -g window-status-attr none
+setw -g window-status-format "#[fg=colour172]#I#[fg=white] #W "
+ 
+# Active window.
+setw -g window-status-current-fg white
+setw -g window-status-current-bg black
+setw -g window-status-current-attr bright
+setw -g window-status-current-format "#[fg=colour172]#I#[fg=white] #W#F"
+ 
+# Window activity.
+setw -g window-status-activity-fg colour246 # grey
+setw -g window-status-activity-bg black
+ 
+# Panes.
+set -g pane-border-fg white
+set -g pane-border-bg black
+set -g pane-active-border-fg green
+set -g pane-active-border-bg black
+ 
+# Command/message line.
+set -g message-fg white
+set -g message-bg black
+set -g message-attr bright
+ 
+# Make the window list appear at the left-hand side instead of at the center.
+set -g status-justify left
