[tmux] increase scrollback buffer

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -6,6 +6,8 @@ bind C-a send-prefix
 set -g default-terminal "xterm-256color"
 set-option -ga terminal-overrides ",xterm-256color:Tc"
 
+tmux set-option history-limit 10000
+
 # reload config
 bind r source-file ~/.tmux.conf
 
