tmux - edit resizing keys

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -27,15 +27,20 @@ unbind Down
 unbind Left
 unbind Right
 
+unbind C-h
+unbind C-j
+unbind C-k
+unbind C-l
+
 unbind C-Up
 unbind C-Down
 unbind C-Left
 unbind C-Right
 
-bind -r C-k resize-pane -U
-bind -r C-j resize-pane -D
-bind -r C-h resize-pane -L
-bind -r C-l resize-pane -R
+bind -r K resize-pane -U
+bind -r J resize-pane -D
+bind -r H resize-pane -L
+bind -r L resize-pane -R
 
 bind -r k select-pane -U
 bind -r j select-pane -D
