--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -50,38 +50,80 @@ bind -r l select-pane -R
 set -g mouse on
 
 # appearance
-# Status line.
-set -g status-fg white
-set -g status-bg black
-set -g status-left ""
-set -g status-right "#{?pane_synchronized, #[bg=blue]SYNCHRONIZED#[default],} #S "
+#
+# Powerline Gray - Tmux Theme
+# Created by Jim Myhrberg <contact@jimeh.me>.
+#
+# Inspired by vim-powerline: https://github.com/Lokaltog/powerline
+#
+# Requires terminal to be using a powerline compatible font, find one here:
+# https://github.com/Lokaltog/powerline-fonts
+#
 
-# Window list.
-setw -g window-status-fg colour246 # grey
-setw -g window-status-bg black
-setw -g window-status-attr none
-setw -g window-status-format "#[fg=colour172]#I#[fg=white] #W "
+# Status update interval
+set -g status-interval 60
 
-# Active window.
-setw -g window-status-current-fg white
-setw -g window-status-current-bg black
-setw -g window-status-current-attr bright
-setw -g window-status-current-format "#[fg=colour172]#I#[fg=white] #W#F"
+# Basic status bar colors
+set -g status-fg colour238
+set -g status-bg colour233
 
-# Window activity.
-setw -g window-status-activity-fg colour246 # grey
-setw -g window-status-activity-bg black
+# Left side of status bar
+set -g status-left-bg colour233
+set -g status-left-fg colour243
+set -g status-left-length 40
+set -g status-left "#[fg=colour232,bg=colour245] Session: #S #[fg=colour245,bg=colour240]#[fg=colour233,bg=colour240] Window: #I #[fg=colour240,bg=colour235]#[fg=colour240,bg=colour235] Pane: #P #[fg=colour235,bg=colour233]"
 
-# Panes.
-set -g pane-border-fg white
-set -g pane-border-bg black
-set -g pane-active-border-fg green
-set -g pane-active-border-bg black
+# Right side of status bar
+#set -g status-right-bg colour233
+#set -g status-right-fg colour243
+#set -g status-right-length 150
+#set -g status-right "#[fg=colour235,bg=colour233]#[fg=colour240,bg=colour235] %H:%M:%S #[fg=colour240,bg=colour235]#[fg=colour233,bg=colour240] %d-%b-%y #[fg=colour245,bg=colour240]#[fg=colour232,bg=colour245,bold] #H "
+set -g status-right ""
 
-# Command/message line.
-set -g message-fg white
-set -g message-bg black
-set -g message-attr bright
+# Window status
+set -g window-status-format "  #I:#W#F  "
+set -g window-status-current-format "#[fg=colour233,bg=black]#[fg=colour250] #I:#W#F #[fg=colour233,bg=black]"
+#set -g window-status-current-format "#[fg=colour233,bg=black]#[fg=colour250,nobold] #I:#W#F #[fg=colour233,bg=black,nobold]"
 
-# Make the window list appear at the left-hand side instead of at the center.
-set -g status-justify left
+# Current window status
+set -g window-status-current-bg black
+set -g window-status-current-fg colour250
+
+# Window with activity status
+set -g window-status-activity-bg colour243 # fg and bg are flipped here due to
+set -g window-status-activity-fg colour233 # a bug in tmux
+
+# Window separator
+set -g window-status-separator ""
+
+# Window status alignment
+set -g status-justify right
+
+# Pane border
+set -g pane-border-bg default
+set -g pane-border-fg colour235
+
+# Active pane border
+set -g pane-active-border-bg default
+set -g pane-active-border-fg colour240
+
+# Pane number indicator
+set -g display-panes-colour colour233
+set -g display-panes-active-colour colour245
+
+# Clock mode
+set -g clock-mode-colour colour240
+set -g clock-mode-style 24
+
+# Message
+set -g message-bg colour245
+set -g message-fg colour232
+
+# Command message
+set -g message-command-bg colour233
+set -g message-command-fg colour250
+
+# Mode
+set -g mode-bg colour243
+set -g mode-fg colour232
+
