--- a/zsh/.zpreztorc
+++ b/zsh/.zpreztorc
@@ -52,7 +52,7 @@ zstyle ':prezto:module:autosuggestions:color' found ''
 #zstyle ':prezto:module:editor' key-bindings 'emacs'
 
 # Auto convert .... to ../..
-zstyle ':prezto:module:editor' dot-expansion 'yes'
+zstyle ':prezto:module:editor' dot-expansion 'no'
 
 #
 # Git
