--- a/tmux/.tmux.old.conf
+++ b/tmux/.tmux.old.conf
@@ -64,15 +64,18 @@ set -g mouse on
 set -g status-interval 60
 
 # Basic status bar colors
-set -g status-style fg=colour238,bg=colour233
+set -g status-fg colour238
+set -g status-bg colour233
 
 # Left side of status bar
-set -g status-left-style fg=colour243,bg=colour233
+set -g status-left-bg colour233
+set -g status-left-fg colour243
 set -g status-left-length 40
 set -g status-left "#[fg=colour232,bg=colour245] Session: #S #[fg=colour245,bg=colour240]#[fg=colour233,bg=colour240] Window: #I #[fg=colour240,bg=colour235]#[fg=colour240,bg=colour235] Pane: #P #[fg=colour235,bg=colour233]"
 
 # Right side of status bar
-# set -g status-right-style fg=colour243,bg=colour233
+#set -g status-right-bg colour233
+#set -g status-right-fg colour243
 #set -g status-right-length 150
 #set -g status-right "#[fg=colour235,bg=colour233]#[fg=colour240,bg=colour235] %H:%M:%S #[fg=colour240,bg=colour235]#[fg=colour233,bg=colour240] %d-%b-%y #[fg=colour245,bg=colour240]#[fg=colour232,bg=colour245,bold] #H "
 set -g status-right ""
@@ -83,10 +86,12 @@ set -g window-status-current-format "#[fg=colour233,bg=black]#[fg=colour250] 
 #set -g window-status-current-format "#[fg=colour233,bg=black]#[fg=colour250,nobold] #I:#W#F #[fg=colour233,bg=black,nobold]"
 
 # Current window status
-set -g window-status-current-style fg=colour250,bg=black
+set -g window-status-current-bg black
+set -g window-status-current-fg colour250
 
 # Window with activity status
-set -g window-status-activity-style fg=colour233,bg=colour243
+set -g window-status-activity-bg colour243 # fg and bg are flipped here due to
+set -g window-status-activity-fg colour233 # a bug in tmux
 
 # Window separator
 set -g window-status-separator ""
@@ -95,10 +100,12 @@ set -g window-status-separator ""
 set -g status-justify right
 
 # Pane border
-set -g pane-border-style fg=colour235,bg=default
+set -g pane-border-bg default
+set -g pane-border-fg colour235
 
 # Active pane border
-set -g pane-active-border-style fg=colour240,bg=default
+set -g pane-active-border-bg default
+set -g pane-active-border-fg colour240
 
 # Pane number indicator
 set -g display-panes-colour colour233
@@ -109,10 +116,14 @@ set -g clock-mode-colour colour240
 set -g clock-mode-style 24
 
 # Message
-set -g message-style fg=colour232,bg=colour245
+set -g message-bg colour245
+set -g message-fg colour232
 
 # Command message
-set -g message-command-style fg=colour250,bg=colour233
+set -g message-command-bg colour233
+set -g message-command-fg colour250
 
 # Mode
-set -g mode-style fg=colour232,bg=colour243
+set -g mode-bg colour243
+set -g mode-fg colour232
+
