zsh | activate archive module

--- a/zsh/.zpreztorc
+++ b/zsh/.zpreztorc
@@ -35,7 +35,8 @@ zstyle ':prezto:load' pmodule \
   'completion' \
   'prompt' \
   'syntax-highlighting' \
-  'history-substring-search'
+  'history-substring-search' \
+  'archive'
 
 #
 # Autosuggestions
