--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -15,6 +15,10 @@ bind r source-file ~/.tmux.conf
 set-window-option -g mode-keys vi
 set -sg escape-time 0
 
+# vi like copy/paste
+bind-key -T copy-mode-vi 'v' send-keys -X begin-selection
+bind-key -T copy-mode-vi 'y' send-keys -X copy-selection
+
 # rebind splits to match vim
 unbind-key s
 unbind-key v
@@ -27,25 +31,30 @@ unbind Down
 unbind Left
 unbind Right
 
-unbind C-h
-unbind C-j
-unbind C-k
-unbind C-l
-
 unbind C-Up
 unbind C-Down
 unbind C-Left
 unbind C-Right
 
-bind -r K resize-pane -U
-bind -r J resize-pane -D
-bind -r H resize-pane -L
-bind -r L resize-pane -R
+unbind C-h
+unbind C-j
+unbind C-k
+unbind C-l
 
-bind -r k select-pane -U
-bind -r j select-pane -D
-bind -r h select-pane -L
-bind -r l select-pane -R
+bind-key -T copy-mode-vi 'C-h' send-keys -X start-of-line
+bind-key -T copy-mode-vi 'C-j' send-keys -X halfpage-down
+bind-key -T copy-mode-vi 'C-k' send-keys -X halfpage-up
+bind-key -T copy-mode-vi 'C-l' send-keys -X end-of-line
+
+bind-key -r K resize-pane -U
+bind-key -r J resize-pane -D
+bind-key -r H resize-pane -L
+bind-key -r L resize-pane -R
+
+bind-key -r k select-pane -U
+bind-key -r j select-pane -D
+bind-key -r h select-pane -L
+bind-key -r l select-pane -R
 
 set -g mouse on
 
