[tmux] add swap and rotate bindings

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -6,7 +6,7 @@ bind C-a send-prefix
 set -g default-terminal "xterm-256color"
 set-option -ga terminal-overrides ",xterm-256color:Tc"
 
-set -g history-limit 10000
+set -g history-limit 100000
 set-option -g repeat-time 0
 
 # reload config
@@ -16,14 +16,19 @@ set-window-option -g mode-keys vi
 set -sg escape-time 0
 
 # vi like copy/paste
-bind-key -T copy-mode-vi 'v' send-keys -X begin-selection
-bind-key -T copy-mode-vi 'y' send-keys -X copy-selection
+bind -T copy-mode-vi 'v' send-keys -X begin-selection
+bind -T copy-mode-vi 'y' send-keys -X copy-selection
+
+bind -T copy-mode-vi 'C-h' send-keys -X start-of-line
+bind -T copy-mode-vi 'C-j' send-keys -X halfpage-down
+bind -T copy-mode-vi 'C-k' send-keys -X halfpage-up
+bind -T copy-mode-vi 'C-l' send-keys -X end-of-line
 
 # rebind splits to match vim
-unbind-key s
-unbind-key v
-bind-key s split-window
-bind-key v split-window -h
+unbind s
+unbind v
+bind s split-window
+bind v split-window -h
 
 # unbind arrows
 unbind Up
@@ -41,20 +46,21 @@ unbind C-j
 unbind C-k
 unbind C-l
 
-bind-key -T copy-mode-vi 'C-h' send-keys -X start-of-line
-bind-key -T copy-mode-vi 'C-j' send-keys -X halfpage-down
-bind-key -T copy-mode-vi 'C-k' send-keys -X halfpage-up
-bind-key -T copy-mode-vi 'C-l' send-keys -X end-of-line
+# swap panes around
+bind H swap-pane -D
+bind J rotate-window -D
+bind K rotate-window -U
+bind L swap-pane -U
 
-bind-key -r K resize-pane -U
-bind-key -r J resize-pane -D
-bind-key -r H resize-pane -L
-bind-key -r L resize-pane -R
+bind -r M-k resize-pane -U
+bind -r M-j resize-pane -D
+bind -r M-h resize-pane -L
+bind -r M-l resize-pane -R
 
-bind-key -r k select-pane -U
-bind-key -r j select-pane -D
-bind-key -r h select-pane -L
-bind-key -r l select-pane -R
+bind -r k select-pane -U
+bind -r j select-pane -D
+bind -r h select-pane -L
+bind -r l select-pane -R
 
 set -g mouse on
 
