--- a/zsh/.zpreztorc
+++ b/zsh/.zpreztorc
@@ -36,6 +36,7 @@ zstyle ':prezto:load' pmodule \
   'prompt' \
   'syntax-highlighting' \
   'history-substring-search' \
+  'autosuggestions' \
   'archive'
 
 #
@@ -43,7 +44,8 @@ zstyle ':prezto:load' pmodule \
 #
 
 # Set the query found color.
-zstyle ':prezto:module:autosuggestions:color' found ''
+zstyle ':prezto:module:autosuggestions' color 'yes'
+zstyle ':prezto:module:autosuggestions:color' found 'fg=8'
 
 #
 # Editor
