--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -15,8 +15,12 @@ bind r source-file ~/.tmux.conf
 set-window-option -g mode-keys vi
 set -sg escape-time 0
 
+# easy way to get to copy-mode
+bind 'Enter' copy-mode
+
 # vi like copy/paste
 bind -T copy-mode-vi 'v' send-keys -X begin-selection
+bind-key -T copy-mode-vi V send -X select-line
 bind -T copy-mode-vi 'y' send-keys -X copy-selection
 
 bind -T copy-mode-vi 'C-h' send-keys -X start-of-line
