[kitty] update config

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -687,8 +687,8 @@ bell_on_tab "🔔 "
 #: Window layout {{{
 
 remember_window_size  no
-initial_window_width  900
-initial_window_height 500
+initial_window_width  1300
+initial_window_height 700
 
 #: If enabled, the OS Window size will be remembered so that new
 #: instances of kitty will have the same size as the previous
@@ -759,12 +759,12 @@ draw_minimal_borders yes
 #: placed centrally. A value of top-left means the padding will be
 #: only at the bottom and right edges.
 
-# active_border_color #00ff00
+active_border_color none
 
 #: The color for the border of the active window. Set this to none to
 #: not draw borders around the active window.
 
-# inactive_border_color #cccccc
+# inactive_border_color none
 
 #: The color for the border of inactive windows.
 
@@ -778,7 +778,9 @@ draw_minimal_borders yes
 #: Fade the text in inactive windows by the specified amount (a number
 #: between zero and one, with zero being fully faded).
 
-# hide_window_decorations no
+hide_window_decorations no
+
+macos_titlebar_color background
 
 #: Hide the window decorations (title-bar and window borders) with
 #: yes. On macOS, titlebar-only and titlebar-and-corners can be used
@@ -874,7 +876,7 @@ tab_bar_margin_height 0.0 0.0
 #: The second number is the margin between the tab bar and the
 #: contents of the current tab.
 
-tab_bar_style fade
+tab_bar_style slant
 
 #: The tab bar style, can be one of:
 
@@ -932,7 +934,7 @@ tab_switch_strategy previous
 #: The separator between tabs in the tab bar when using separator as
 #: the tab_bar_style.
 
-# tab_powerline_style angled
+tab_powerline_style angled
 
 #: The powerline separator style between tabs in the tab bar when
 #: using powerline as the tab_bar_style, can be one of: angled,
@@ -1406,7 +1408,7 @@ close_on_child_death no
 #: special value of ask means that kitty will ask before opening the
 #: link when clicked.
 
-# shell_integration enabled
+shell_integration no-cursor
 
 #: Enable shell integration on supported shells. This enables features
 #: such as jumping to previous prompts, browsing the output of the
@@ -2348,3 +2350,21 @@ close_on_child_death no
 #: }}}
 
 #: }}}
+#
+
+############
+# mappings #
+############
+
+map ctrl+tab next_tab
+map ctrl+shift+tab previous_tab
+
+map cmd+1 goto_tab 1
+map cmd+2 goto_tab 2
+map cmd+3 goto_tab 3
+map cmd+4 goto_tab 4
+map cmd+5 goto_tab 5
+map cmd+6 goto_tab 6
+map cmd+7 goto_tab 7
+map cmd+8 goto_tab 8
+map cmd+9 goto_tab 9
