[kitty] update macos specific configs

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -780,8 +780,6 @@ active_border_color none
 
 hide_window_decorations no
 
-macos_titlebar_color background
-
 #: Hide the window decorations (title-bar and window borders) with
 #: yes. On macOS, titlebar-only and titlebar-and-corners can be used
 #: to only hide the titlebar and the rounded corners. Whether this
@@ -1486,7 +1484,7 @@ shell_integration no-cursor
 #: to use the background color of the currently active window and
 #: finally you can use an arbitrary color, such as #12af59 or red.
 
-# macos_titlebar_color system
+macos_titlebar_color background
 
 #: The color of the kitty window's titlebar on macOS. A value of
 #: system means to use the default system color, light or dark can
@@ -1500,7 +1498,7 @@ shell_integration no-cursor
 #: background_opacity. If you want to use both, you are probably
 #: better off just hiding the titlebar with hide_window_decorations.
 
-# macos_option_as_alt no
+macos_option_as_alt both
 
 #: Use the Option key as an Alt key on macOS. With this set to no,
 #: kitty will use the macOS native Option+Key to enter Unicode
@@ -1521,18 +1519,18 @@ shell_integration no-cursor
 #: Dock). Changing this option by reloading the config is not
 #: supported.
 
-# macos_quit_when_last_window_closed no
+macos_quit_when_last_window_closed no
 
 #: Have kitty quit when all the top-level windows are closed on macOS.
 #: By default, kitty will stay running, even with no open windows, as
 #: is the expected behavior on macOS.
 
-# macos_window_resizable yes
+macos_window_resizable yes
 
 #: Disable this if you want kitty top-level OS windows to not be
 #: resizable on macOS.
 
-# macos_thicken_font 0
+macos_thicken_font 0
 
 #: Draw an extra border around the font with the given width, to
 #: increase legibility at small font sizes on macOS. For example, a
@@ -1571,7 +1569,7 @@ shell_integration no-cursor
 #: mouse cursor invisible on dual GPU machines. Changing this option
 #: by reloading the config is not supported.
 
-# macos_colorspace srgb
+macos_colorspace srgb
 
 #: The colorspace in which to interpret terminal colors. The default
 #: of srgb will cause colors to match those seen in web browsers. The
