[kitty] update mouse mapping for links

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1619,3 +1619,7 @@ map cmd+6 goto_tab 6
 map cmd+7 goto_tab 7
 map cmd+8 goto_tab 8
 map cmd+9 goto_tab 9
+
+mouse_map left click ungrabbed no_op
+# mouse_map cmd+left click ungrabbed mouse_handle_click selection link prompt
+mouse_map cmd+left release grabbed,ungrabbed mouse_handle_click link
