--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -415,7 +415,7 @@ select_by_word_characters @-./_~?&=%+#
 #: If empty (default) select_by_word_characters will be used for both
 #: directions.
 
-# click_interval -1.0
+click_interval 0.2
 
 #: The interval between successive clicks to detect double/triple
 #: clicks (in seconds). Negative numbers will use the system default
@@ -1620,6 +1620,14 @@ map cmd+7 goto_tab 7
 map cmd+8 goto_tab 8
 map cmd+9 goto_tab 9
 
-mouse_map left click ungrabbed no_op
+mouse_map left click ungrabbed,grabbed clear_selection
+
 # mouse_map cmd+left click ungrabbed mouse_handle_click selection link prompt
 mouse_map cmd+left release grabbed,ungrabbed mouse_handle_click link
+
+# Start selecting text even when grabbed
+mouse_map alt+left press ungrabbed,grabbed mouse_selection normal
+
+# select word even when grabbed
+mouse_map alt+left doublepress ungrabbed,grabbed mouse_selection word
+mouse_map alt+left triplepress ungrabbed,grabbed mouse_selection line
