--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -3,7 +3,8 @@ unbind C-b
 set -g prefix C-a
 bind C-a send-prefix
 
-set -g default-terminal "xterm-256color"
+set-option -g default-terminal "tmux-256color"
+# set -g default-terminal "xterm-256color"
 set-option -ga terminal-overrides ",xterm-256color:Tc"
 
 set -g history-limit 100000
