--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -171,7 +171,7 @@ disable_ligatures never
 #: curl oscillates. With sparse the curl will peak once per character,
 #: with dense twice.
 
-# text_composition_strategy platform
+text_composition_strategy platform 1.0 0
 
 #: Control how kitty composites text glyphs onto the background color.
 #: The default value of platform tries for text rendering as close to
@@ -319,8 +319,8 @@ scrollback_pager less --chop-long-lines --RAW-CONTROL-CHARS +INPUT_LINE_NUMBER
 #: robustly with the ever-changing sea of bugs that is Cocoa is too
 #: much effort.
 
-# url_color #0087bd
-# url_style curly
+url_color #0087bd
+url_style straight
 
 #: The color and style for highlighting URLs on mouse-over. url_style
 #: can be one of: none, straight, double, curly, dotted, dashed.
@@ -534,11 +534,11 @@ click_interval 0.2
 
 #: Select a word
 
-# mouse_map left doublepress ungrabbed mouse_selection word
+mouse_map left doublepress ungrabbed mouse_selection word
 
 #: Select a line
 
-# mouse_map left triplepress ungrabbed mouse_selection line
+mouse_map left triplepress ungrabbed mouse_selection line
 
 #: Select line from point
 
@@ -1406,7 +1406,7 @@ close_on_child_death no
 #: special value of ask means that kitty will ask before opening the
 #: link when clicked.
 
-shell_integration no-cursor
+shell_integration no-cursor no-sudo
 
 #: Enable shell integration on supported shells. This enables features
 #: such as jumping to previous prompts, browsing the output of the
