[kitty] update text_composition_strategy

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -171,7 +171,7 @@ disable_ligatures never
 #: curl oscillates. With sparse the curl will peak once per character,
 #: with dense twice.
 
-text_composition_strategy platform 1.0 0
+text_composition_strategy platform
 
 #: Control how kitty composites text glyphs onto the background color.
 #: The default value of platform tries for text rendering as close to
